[package]
name = "cyber-crack-pro"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
futures = "0.3"
regex = "1.0"
bytes = "1.0"
pin-project = "1.0"
paste = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
heck = "0.4"
hecks = "0.1"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
directories = "5.0"
dirs = "5.0"