[project]
name = "cyber-crack-pro"
version = "3.0.0"
description = "AI-powered ultra fast APK cracking system with 100+ features"
authors = ["Cyber Crack Pro Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
aiohttp = "^3.8.0"
aiogram = "^2.23.0"
redis = "^4.3.0"
psycopg2-binary = "^2.9.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.0"
pydantic = "^1.10.0"
sqlalchemy = "^1.4.0"
celery = "^5.2.0"
docker = "^6.0.0"
kubernetes = "^24.0.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
scikit-learn = "^1.1.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
transformers = "^4.20.0"
openai = "^0.27.0"
python-dotenv = "^0.19.0"
asyncio-mqtt = "^0.11.0"
cryptography = "^3.4.8"
pyyaml = "^6.0"
aiofiles = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^4.0.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"